--- a/src/Sampling-Modeling.ipynb
+++ b/src/Sampling-Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "66f7fbe1",
+   "id": "0ad2b628",
    "metadata": {},
    "source": [
     "Final Project Group 13\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b61901f2",
+   "id": "f6c58316",
    "metadata": {},
    "source": [
     "### Expected Outcomes\n",
@@ -36,9 +36,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3320796d",
+   "id": "9ae6b966",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The text.latex.unicode rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2.\n",
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The savefig.frameon rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The pgf.debug rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2.\n",
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The verbose.level rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The verbose.fileo rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -53,24 +70,26 @@
     "\n",
     "from imblearn.pipeline import make_pipeline\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "from imblearn.under_sampling import RandomUnderSampler"
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "102e7889",
+   "id": "ecb73a18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('data/train.csv', header=0)\n",
-    "test = pd.read_csv('data/test.csv', header=0)"
+    "train = pd.read_csv('../data/train_processed.csv', header=0)\n",
+    "test = pd.read_csv('../data/test_processed.csv', header=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ecb92284",
+   "id": "18cc9443",
    "metadata": {},
    "outputs": [
     {
@@ -90,8 +109,10 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "14e577f0",
-   "metadata": {},
+   "id": "60926bca",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -119,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c2777b5e",
+   "id": "22df0257",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fbdefb27",
+   "id": "693bd4cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "df9b62e7",
+   "id": "30bf9547",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b834fcd2",
+   "id": "d8653d9e",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d3c354bf",
+   "id": "5a09fc3b",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e2fc33f9",
+   "id": "d32d29a9",
    "metadata": {
     "scrolled": true
    },
@@ -252,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0967e582",
+   "id": "19ccf239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "285409df",
+   "id": "1491e9af",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ce6b28a3",
+   "id": "b4a1c559",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +350,39 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ffbee887",
+   "id": "e42dd3cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     26848\n",
+      "           1       0.86      0.77      0.81       438\n",
+      "\n",
+      "    accuracy                           0.99     27286\n",
+      "   macro avg       0.93      0.88      0.90     27286\n",
+      "weighted avg       0.99      0.99      0.99     27286\n",
+      "\n",
+      "[[26792    56]\n",
+      " [  100   338]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gbt = GradientBoostingClassifier(learning_rate=0.1, n_estimators=100,max_depth=3, min_samples_split=2, min_samples_leaf=1, subsample=1,max_features='sqrt', random_state=10)\n",
+    "gbt.fit(X_train_resampled,y_train_resampled)\n",
+    "gbt_predictions = gbt.predict(X_val) \n",
+    "print(classification_report(y_val, gbt_predictions))\n",
+    "print(confusion_matrix(y_val, gbt_predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cbd5e193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,9 +394,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c2819e04",
-   "metadata": {},
+   "execution_count": 16,
+   "id": "48e28f43",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -425,18 +480,7 @@
       "[73]\tvalid_0's l1: 0.0199402\n",
       "[74]\tvalid_0's l1: 0.0199354\n",
       "Early stopping, best iteration is:\n",
-      "[64]\tvalid_0's l1: 0.0198545\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      1.00      0.99     26848\n",
-      "           1       0.99      0.32      0.49       438\n",
-      "\n",
-      "    accuracy                           0.99     27286\n",
-      "   macro avg       0.99      0.66      0.74     27286\n",
-      "weighted avg       0.99      0.99      0.99     27286\n",
-      "\n",
-      "[[26847     1]\n",
-      " [  296   142]]\n"
+      "[64]\tvalid_0's l1: 0.0198545\n"
      ]
     }
    ],
@@ -460,15 +504,42 @@
     "\n",
     "y_pred_proba = bst.predict(X_val)\n",
     "\n",
-    "y_pred_class = [1 if pred > 0.5 else 0 for pred in y_pred_proba]\n",
+    "y_pred_class = [1 if pred > 0.5 else 0 for pred in y_pred_proba]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "974947c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      1.00      0.99     26848\n",
+      "           1       0.99      0.32      0.49       438\n",
+      "\n",
+      "    accuracy                           0.99     27286\n",
+      "   macro avg       0.99      0.66      0.74     27286\n",
+      "weighted avg       0.99      0.99      0.99     27286\n",
+      "\n",
+      "[[26847     1]\n",
+      " [  296   142]]\n"
+     ]
+    }
+   ],
+   "source": [
     "print(classification_report(y_val, y_pred_class, zero_division=0))\n",
     "print(confusion_matrix(y_val, y_pred_class))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "2ceb251e",
+   "execution_count": 18,
+   "id": "9deccb60",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +748,32 @@
       "[199]\tvalid_0's l1: 0.0246378\n",
       "[200]\tvalid_0's l1: 0.0245519\n",
       "Did not meet early stopping. Best iteration is:\n",
-      "[200]\tvalid_0's l1: 0.0245519\n",
+      "[200]\tvalid_0's l1: 0.0245519\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data = lgb.Dataset(X_train_smote, label=y_train_smote)\n",
+    "val_data = lgb.Dataset(X_val, label=y_val)\n",
+    "\n",
+    "num_round = 200\n",
+    "bst = lgb.train(params, train_data, num_round, valid_sets=[val_data], early_stopping_rounds=10)\n",
+    "\n",
+    "y_pred_proba = bst.predict(X_val)\n",
+    "\n",
+    "y_pred_class = [1 if pred > 0.5 else 0 for pred in y_pred_proba]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7509f7bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     26848\n",
@@ -693,23 +789,14 @@
     }
    ],
    "source": [
-    "train_data = lgb.Dataset(X_train_smote, label=y_train_smote)\n",
-    "val_data = lgb.Dataset(X_val, label=y_val)\n",
-    "\n",
-    "num_round = 200\n",
-    "bst = lgb.train(params, train_data, num_round, valid_sets=[val_data], early_stopping_rounds=10)\n",
-    "\n",
-    "y_pred_proba = bst.predict(X_val)\n",
-    "\n",
-    "y_pred_class = [1 if pred > 0.5 else 0 for pred in y_pred_proba]\n",
     "print(classification_report(y_val, y_pred_class, zero_division=0))\n",
     "print(confusion_matrix(y_val, y_pred_class))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "cd165e5b",
+   "execution_count": 20,
+   "id": "d8e4afcb",
    "metadata": {},
    "outputs": [
     {
@@ -918,18 +1005,7 @@
       "[199]\tvalid_0's l1: 0.0243279\n",
       "[200]\tvalid_0's l1: 0.0242424\n",
       "Did not meet early stopping. Best iteration is:\n",
-      "[200]\tvalid_0's l1: 0.0242424\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      1.00      1.00     26848\n",
-      "           1       0.86      0.79      0.82       438\n",
-      "\n",
-      "    accuracy                           0.99     27286\n",
-      "   macro avg       0.93      0.89      0.91     27286\n",
-      "weighted avg       0.99      0.99      0.99     27286\n",
-      "\n",
-      "[[26790    58]\n",
-      " [   94   344]]\n"
+      "[200]\tvalid_0's l1: 0.0242424\n"
      ]
     }
    ],
@@ -953,18 +1029,37 @@
     "\n",
     "y_pred_proba = bst.predict(X_val)\n",
     "\n",
-    "y_pred_class = [1 if pred > 0.5 else 0 for pred in y_pred_proba]\n",
-    "print(classification_report(y_val, y_pred_class, zero_division=0))\n",
-    "print(confusion_matrix(y_val, y_pred_class))"
+    "y_pred_class = [1 if pred > 0.5 else 0 for pred in y_pred_proba]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c64f4e13",
+   "execution_count": 21,
+   "id": "05b8a9a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     26848\n",
+      "           1       0.86      0.79      0.82       438\n",
+      "\n",
+      "    accuracy                           0.99     27286\n",
+      "   macro avg       0.93      0.89      0.91     27286\n",
+      "weighted avg       0.99      0.99      0.99     27286\n",
+      "\n",
+      "[[26790    58]\n",
+      " [   94   344]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_val, y_pred_class, zero_division=0))\n",
+    "print(confusion_matrix(y_val, y_pred_class))"
+   ]
   }
  ],
  "metadata": {
