--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "08a872cc",
+   "id": "42833941",
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ba7fa3f7",
+   "id": "5cb8372e",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60bdd851",
+   "id": "1b112776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f639b7b",
+   "id": "366e2949",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "64426413",
+   "id": "440781dc",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7968ed9b",
+   "id": "7ef1f1f5",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a2b44a03",
+   "id": "87f281c3",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5ffee4cb",
+   "id": "7efe26d0",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3fe223c1",
+   "id": "a6e4cc32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fcf8ade9",
+   "id": "09991628",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a6982393",
+   "id": "a17baea2",
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d36c7da7",
+   "id": "84c2c1c0",
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "667bbb4a",
+   "id": "6317d857",
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3d2ef203",
+   "id": "3aebb3a0",
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c8caba10",
+   "id": "2b42b696",
    "metadata": {},
    "outputs": [
     {
@@ -1341,11 +1341,11 @@
       "L49056    204\n",
       "L56257    203\n",
       "         ... \n",
-      "L47541      1\n",
-      "M18739      1\n",
+      "L49045      1\n",
       "M23435      1\n",
-      "L49780      1\n",
-      "L52439      1\n",
+      "H34610      1\n",
+      "M18739      1\n",
+      "M23219      1\n",
       "Name: Product ID, Length: 9995, dtype: int64\n",
       "-------------------------------------------------\n",
       "-------------------------------------------------\n",
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fa09a87f",
+   "id": "f789d6f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,7 +1572,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d69a30a1",
+   "id": "903ddf1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "01ac7307",
+   "id": "2220cc74",
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dd2021f6",
+   "id": "93130659",
    "metadata": {},
    "outputs": [
     {
@@ -2018,9 +2018,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "48bf6c55",
+   "id": "ece19d9e",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2088,14 +2088,14 @@
     "for col_name in num_features.columns:\n",
     "    sns.histplot(num_features[col_name])\n",
     "    plt.title(f'{col_name} histogram')\n",
-    "    plt.show()\n",
-    "\n"
+    "    plt.savefig(f'../figs/{col_name}Distribution.png')\n",
+    "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5461f5c3",
+   "id": "88449810",
    "metadata": {},
    "outputs": [
     {
@@ -2187,6 +2187,7 @@
     "for col_name in cat_features.columns:\n",
     "    sns.histplot(cat_features[col_name])\n",
     "    plt.title(f'{col_name} histogram')\n",
+    "    plt.savefig(f'../figs/{col_name}Distribution.png')\n",
     "    plt.show()\n",
     "\n"
    ]
@@ -2194,10 +2195,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e139371e",
+   "id": "37009d05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "sns.pairplot(df, hue='Target')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29e4205d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "fig = px.scatter_3d(df, x='Tool wear [min]', y='Torque [Nm]', z='Rotational speed [rpm]',\n",
+    "              color='Target')\n",
+    "fig.show()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
