--- a/src/Hyper-Modeling.ipynb
+++ b/src/Hyper-Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "847a9b08",
+   "id": "6a4337bb",
    "metadata": {},
    "source": [
     "# Modeling - Hyperparameter tuning (Adv-ML)\n",
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "3f4fc232",
+   "execution_count": 5,
+   "id": "816c9c04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "from sklearn.metrics import classification_report, confusion_matrix \n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import GridSearchCV \n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from xgboost import XGBClassifier\n",
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "a557f7ce",
+   "execution_count": 2,
+   "id": "8d2dc230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "cbf28782",
+   "execution_count": 3,
+   "id": "05cc91df",
    "metadata": {
     "scrolled": true
    },
@@ -82,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "9247b3d7",
+   "execution_count": null,
+   "id": "9a6a97da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,83 +100,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "42e8547d",
+   "execution_count": null,
+   "id": "80997ff3",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c71e7db4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "param_grid = { \n",
+    "param_dist_rfc = { \n",
     "    'n_estimators': [10, 50, 100, 200],\n",
     "    'max_features': ['auto', 'sqrt', 'log2'],\n",
     "    'max_depth' : [4,5,6,7,8],\n",
     "    'criterion' :['gini', 'entropy']\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "90e73ad6",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, estimator=RandomForestClassifier(),\n",
-       "             param_grid={'criterion': ['gini', 'entropy'],\n",
-       "                         'max_depth': [4, 5, 6, 7, 8],\n",
-       "                         'max_features': ['auto', 'sqrt', 'log2'],\n",
-       "                         'n_estimators': [10, 50, 100, 200]})"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "}\n",
+    "\n",
     "rfc = RandomForestClassifier()\n",
-    "rfcCV = GridSearchCV(estimator=rfc, param_grid=param_grid, cv= 5)\n",
-    "rfcCV.fit(X_train, y_train)"
+    "random_search_rfc = RandomizedSearchCV(estimator=rfc, param_distributions=param_dist_rfc, cv=3)\n",
+    "random_search_rfc.fit(X_train_pca, y_train)\n",
+    "\n",
+    "rfc_predictions = random_search_rfc.predict(X_test_pca) \n",
+    "print(classification_report(y_val, rfc_predictions)) \n",
+    "print(confusion_matrix(y_val, rfc_predictions))\n",
+    "print(\"Best Parameters for RFC:\", random_search_rfc.best_params_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "616d8468",
+   "execution_count": null,
+   "id": "33d49614",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      1.00      1.00     40296\n",
-      "           1       1.00      0.75      0.86       633\n",
-      "\n",
-      "    accuracy                           1.00     40929\n",
-      "   macro avg       1.00      0.88      0.93     40929\n",
-      "weighted avg       1.00      1.00      1.00     40929\n",
-      "\n",
-      "[[40294     2]\n",
-      " [  157   476]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "grid_predictions = rfcCV.predict(X_val) \n",
-    "rfcCV.best_params_\n",
-    "print(classification_report(y_val, grid_predictions)) \n",
-    "print(confusion_matrix(y_val, grid_predictions))"
+    "report = classification_report(y_val, rfc_predictions, output_dict=True)\n",
+    "conf_matrix = confusion_matrix(y_val, rfc_predictions)\n",
+    "\n",
+    "# Extract metrics from classification report\n",
+    "precision = report['weighted avg']['precision']\n",
+    "recall = report['weighted avg']['recall']\n",
+    "f1_score = report['weighted avg']['f1-score']\n",
+    "accuracy = report['accuracy']\n",
+    "\n",
+    "# Create a DataFrame to store the metrics\n",
+    "data = {\n",
+    "    'Model' : 'RFC',\n",
+    "    'Precision': precision,\n",
+    "    'Recall': recall,\n",
+    "    'F1 Score': f1_score,\n",
+    "    'Accuracy': accuracy,\n",
+    "    'Confusion Matrix': [conf_matrix]\n",
+    "}\n",
+    "\n",
+    "metrics_df = pd.DataFrame(data)\n",
+    "print(metrics_df)\n",
+    "\n",
+    "#metrics_df.to_csv('../data/pcaResults.csv', header=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "a16b3600",
+   "execution_count": null,
+   "id": "db1bb298",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "e327297f",
+   "execution_count": null,
+   "id": "cd34c7ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {\n",
+    "param_dist_gbt = {\n",
     "    'n_estimators': [25, 50, 100],\n",
     "    'learning_rate': [0.01, 0.05, 0.1],\n",
     "    'max_depth': [3, 5, 7],\n",
@@ -198,38 +189,54 @@
     "    'min_samples_leaf': [1, 2, 4],\n",
     "    'subsample': [0.8, 1.0],\n",
     "    'max_features': ['auto', 'sqrt']\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de20c2d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "}\n",
+    "\n",
     "gbt = GradientBoostingClassifier()\n",
-    "gbt = GridSearchCV(estimator=gbt, param_grid=param_grid, cv= 3)\n",
-    "gbt.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24cc71a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_predictions = gbt.predict(X_val) \n",
+    "random_search_gbt = RandomizedSearchCV(estimator=gbt, param_distributions=param_dist_gbt, cv=3)\n",
+    "random_search_gbt.fit(X_train_pca, y_train)\n",
+    "\n",
+    "gbt_predictions = random_search_gbt.predict(X_test_pca) \n",
     "print(classification_report(y_val, grid_predictions)) \n",
     "print(confusion_matrix(y_val, grid_predictions))\n",
-    "print(\"Best Parameters for GBT:\", gbt.best_params_)"
+    "print(\"Best Parameters for GBT:\", random_search_gbt.best_params_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0a55ce2",
+   "id": "3c9b39fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report = classification_report(y_val, gbt_predictions, output_dict=True)\n",
+    "conf_matrix = confusion_matrix(y_val, gbt_predictions)\n",
+    "\n",
+    "# Extract metrics from classification report\n",
+    "precision = report['weighted avg']['precision']\n",
+    "recall = report['weighted avg']['recall']\n",
+    "f1_score = report['weighted avg']['f1-score']\n",
+    "accuracy = report['accuracy']\n",
+    "\n",
+    "# Create a DataFrame to store the metrics\n",
+    "data = {\n",
+    "    'Model' : 'GBT',\n",
+    "    'Precision': precision,\n",
+    "    'Recall': recall,\n",
+    "    'F1 Score': f1_score,\n",
+    "    'Accuracy': accuracy,\n",
+    "    'Confusion Matrix': [conf_matrix]\n",
+    "}\n",
+    "\n",
+    "metrics_df = pd.DataFrame(data)\n",
+    "print(metrics_df)\n",
+    "\n",
+    "#metrics_df.to_csv('../data/pcaResults.csv', header=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bea79ca8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,49 +246,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "582fb619",
+   "id": "d1b28bef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid_xgb = {\n",
+    "param_dist_xgb = {\n",
     "    'min_child_weight': [40, 50, 60],\n",
     "    'max_delta_step': [0, 1, 2],\n",
     "    'learning_rate': [0.01, 0.05, 0.1],\n",
     "    'max_depth': [5, 10, 15],\n",
     "    'n_estimators': [25, 50, 100],\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a1f057a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    'Best Params':random_search_gbt.best_params_\n",
+    "}\n",
+    "\n",
     "xgb = XGBClassifier()\n",
-    "grid_search_xgb = GridSearchCV(estimator=xgb, param_grid=param_grid_xgb, cv=3)\n",
-    "grid_search_xgb.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e514a60",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_params_xgb = grid_search_xgb.best_params_\n",
-    "grid_predictions_xgb = best_estimator_xgb.predict(X_val)\n",
+    "random_search_xgb = RandomizedSearchCV(estimator=xgb, param_distributions=param_dist_xgb, cv=3)\n",
+    "random_search_xgb.fit(X_train_pca, y_train)\n",
+    "\n",
+    "grid_predictions_xgb = random_search_xgb.predict(X_test_pca)\n",
     "print(classification_report(y_val, grid_predictions_xgb, zero_division=0)) \n",
     "print(confusion_matrix(y_val, grid_predictions_xgb))\n",
-    "print(\"Best Parameters for XGBoost:\", best_params_xgb)"
+    "print(\"Best Parameters for XGBoost:\", random_search_xgb.best_params_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae4a6164",
+   "id": "3a5cd0f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report = classification_report(y_val, grid_predictions_xgb, output_dict=True)\n",
+    "conf_matrix = confusion_matrix(y_val, grid_predictions_xgb)\n",
+    "params = random_search_xgb.best_params_\n",
+    "# Extract metrics from classification report\n",
+    "precision = report['weighted avg']['precision']\n",
+    "recall = report['weighted avg']['recall']\n",
+    "f1_score = report['weighted avg']['f1-score']\n",
+    "accuracy = report['accuracy']\n",
+    "\n",
+    "# Create a DataFrame to store the metrics\n",
+    "data = {\n",
+    "    'Model' : 'XGBoost',\n",
+    "    'Precision': precision,\n",
+    "    'Recall': recall,\n",
+    "    'F1 Score': f1_score,\n",
+    "    'Accuracy': accuracy,\n",
+    "    'Confusion Matrix': [conf_matrix],\n",
+    "    'Best Params':random_search_xgb.best_params_\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "metrics_df = metrics_df.append(df, ignore_index=True)\n",
+    "print(metrics_df)\n",
+    "\n",
+    "#metrics_df.to_csv('../data/pcaResults.csv', header=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72103354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,49 +316,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1209e29d",
+   "id": "4ed909c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {\n",
+    "param_dist_light = {\n",
     "    'min_child_weight': [40, 50, 60],\n",
     "    'max_delta_step': [0, 1, 2],\n",
     "    'num_leaves': [20, 30, 40],\n",
     "    'learning_rate': [0.01, 0.05, 0.1],\n",
     "    'max_depth': [5, 10, 15],\n",
     "    'n_estimators': [25, 50, 100],\n",
-    "}"
+    "}\n",
+    "\n",
+    "lgbm = lgb.LGBMClassifier()\n",
+    "random_search_lgbm = RandomizedSearchCV(lgbm, param_distributions=param_dist_light, verbose=1, cv=3, n_jobs=-1)\n",
+    "random_search_lgbm.fit(X_train_pca, y_train)\n",
+    "\n",
+    "grid_predictions_lgbm = random_search_lgbm.predict(X_test_pca) \n",
+    "print(classification_report(y_val, grid_predictions_lgbm, zero_division=0)) \n",
+    "print(confusion_matrix(y_val, grid_predictions_lgbm))\n",
+    "print(\"Best Parameters for LGBM:\", random_search_lgbm.best_params_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ef40bb8",
+   "id": "9605f671",
    "metadata": {},
    "outputs": [],
    "source": [
-    "light = lgb.LGBMClassifier()\n",
-    "light = GridSearchCV(mdl, param_grid, verbose=1, cv=3, n_jobs=-1)\n",
-    "light.fit(x_train, y_train)"
+    "report = classification_report(y_val, grid_predictions_xgb, output_dict=True)\n",
+    "conf_matrix = confusion_matrix(y_val, grid_predictions_xgb)\n",
+    "\n",
+    "# Extract metrics from classification report\n",
+    "precision = report['weighted avg']['precision']\n",
+    "recall = report['weighted avg']['recall']\n",
+    "f1_score = report['weighted avg']['f1-score']\n",
+    "accuracy = report['accuracy']\n",
+    "\n",
+    "# Create a DataFrame to store the metrics\n",
+    "data = {\n",
+    "    'Model' : 'LGBM',\n",
+    "    'Precision': precision,\n",
+    "    'Recall': recall,\n",
+    "    'F1 Score': f1_score,\n",
+    "    'Accuracy': accuracy,\n",
+    "    'Confusion Matrix': [conf_matrix],\n",
+    "    'Best Params':random_search_lgbm.best_params_\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "metrics_df = metrics_df.append(df, ignore_index=True)\n",
+    "print(metrics_df)\n",
+    "\n",
+    "metrics_df.to_csv('../data/tuningResults.csv', header=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a62be64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_predictions = light.predict(X_val) \n",
-    "print(classification_report(y_val, grid_predictions, zero_division=0)) \n",
-    "print(confusion_matrix(y_val, grid_predictions))\n",
-    "print(\"Best Parameters for LGBM:\", light.best_params_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "744dadad",
+   "id": "cf6268ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -341,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c947b27",
+   "id": "4f6b6b7a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -352,6 +395,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
