--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "42833941",
+   "id": "15312ec1",
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5cb8372e",
+   "id": "28a51dcc",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1b112776",
+   "id": "f7ac7a57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "366e2949",
+   "id": "9862c07f",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "440781dc",
+   "id": "3eaf23a4",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ef1f1f5",
+   "id": "1d96ae29",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "87f281c3",
+   "id": "6b384f98",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7efe26d0",
+   "id": "cc68939f",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a6e4cc32",
+   "id": "f0253355",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "09991628",
+   "id": "a79fa31b",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a17baea2",
+   "id": "5f13f7d5",
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "84c2c1c0",
+   "id": "629d2ef0",
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6317d857",
+   "id": "0a2a8ec8",
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3aebb3a0",
+   "id": "96f00329",
    "metadata": {},
    "outputs": [
     {
@@ -1310,269 +1310,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "2b42b696",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------------------------------------------\n",
-      "id\n",
-      "0         1\n",
-      "126359    1\n",
-      "79244     1\n",
-      "81293     1\n",
-      "75150     1\n",
-      "         ..\n",
-      "107105    1\n",
-      "113250    1\n",
-      "111203    1\n",
-      "100964    1\n",
-      "2047      1\n",
-      "Name: id, Length: 227383, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Product ID\n",
-      "L53257    224\n",
-      "L53271    214\n",
-      "L48892    211\n",
-      "L49056    204\n",
-      "L56257    203\n",
-      "         ... \n",
-      "L49045      1\n",
-      "M23435      1\n",
-      "H34610      1\n",
-      "M18739      1\n",
-      "M23219      1\n",
-      "Name: Product ID, Length: 9995, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Type\n",
-      "L    158792\n",
-      "M     53687\n",
-      "H     14904\n",
-      "Name: Type, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Air temperature [K]\n",
-      "300.700    4984\n",
-      "297.400    4042\n",
-      "300.500    3707\n",
-      "300.600    3584\n",
-      "298.200    3419\n",
-      "           ... \n",
-      "295.400      10\n",
-      "295.300       4\n",
-      "303.960       1\n",
-      "297.095       1\n",
-      "300.980       1\n",
-      "Name: Air temperature [K], Length: 95, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Process temperature [K]\n",
-      "310.6    5159\n",
-      "310.8    4695\n",
-      "310.7    4392\n",
-      "308.5    4198\n",
-      "308.6    4165\n",
-      "         ... \n",
-      "306.7      22\n",
-      "306.9      16\n",
-      "313.7      15\n",
-      "305.8      10\n",
-      "313.8       9\n",
-      "Name: Process temperature [K], Length: 81, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Rotational speed [rpm]\n",
-      "1452.0    1119\n",
-      "1447.0     937\n",
-      "1435.0     931\n",
-      "1418.0     894\n",
-      "1469.0     868\n",
-      "          ... \n",
-      "2006.0       1\n",
-      "2169.0       1\n",
-      "2212.0       1\n",
-      "1181.0       1\n",
-      "2597.0       1\n",
-      "Name: Rotational speed [rpm], Length: 952, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Torque [Nm]\n",
-      "37.7    1029\n",
-      "43.2     908\n",
-      "40.2     897\n",
-      "41.2     884\n",
-      "42.4     875\n",
-      "        ... \n",
-      "12.4       1\n",
-      "14.1       1\n",
-      "12.7       1\n",
-      "65.4       1\n",
-      "10.2       1\n",
-      "Name: Torque [Nm], Length: 611, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Tool wear [min]\n",
-      "0.0      3790\n",
-      "2.0      1771\n",
-      "119.0    1448\n",
-      "59.0     1427\n",
-      "5.0      1419\n",
-      "         ... \n",
-      "236.0       7\n",
-      "237.0       6\n",
-      "239.0       6\n",
-      "253.0       3\n",
-      "251.0       1\n",
-      "Name: Tool wear [min], Length: 246, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Machine failure\n",
-      "0.0    134281\n",
-      "1.0      2148\n",
-      "Name: Machine failure, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "TWF\n",
-      "0    227037\n",
-      "1       346\n",
-      "Name: TWF, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "HDF\n",
-      "0    226193\n",
-      "1      1190\n",
-      "Name: HDF, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "PWF\n",
-      "0    226842\n",
-      "1       541\n",
-      "Name: PWF, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "OSF\n",
-      "0    226491\n",
-      "1       892\n",
-      "Name: OSF, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "RNF\n",
-      "0    226865\n",
-      "1       518\n",
-      "Name: RNF, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Air temperature \n",
-      "300.7    3333\n",
-      "300.5    2609\n",
-      "297.4    2595\n",
-      "300.6    2340\n",
-      "298.2    2302\n",
-      "         ... \n",
-      "296.1      36\n",
-      "304.4      28\n",
-      "296.0      16\n",
-      "295.3       8\n",
-      "295.4       5\n",
-      "Name: Air temperature , Length: 92, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Process temperature \n",
-      "310.60    3422\n",
-      "310.80    3098\n",
-      "310.70    2951\n",
-      "308.50    2800\n",
-      "308.60    2785\n",
-      "          ... \n",
-      "305.70       8\n",
-      "305.80       6\n",
-      "313.80       2\n",
-      "308.15       1\n",
-      "307.28       1\n",
-      "Name: Process temperature , Length: 84, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Rotational speed \n",
-      "1452.0    755\n",
-      "1435.0    651\n",
-      "1479.0    599\n",
-      "1429.0    598\n",
-      "1447.0    588\n",
-      "         ... \n",
-      "2328.0      1\n",
-      "2119.0      1\n",
-      "1941.0      1\n",
-      "2643.0      1\n",
-      "2205.0      1\n",
-      "Name: Rotational speed , Length: 946, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Torque \n",
-      "37.7    627\n",
-      "40.2    612\n",
-      "43.2    597\n",
-      "47.3    579\n",
-      "43.9    576\n",
-      "       ... \n",
-      "72.0      1\n",
-      "70.2      1\n",
-      "8.2       1\n",
-      "74.6      1\n",
-      "69.6      1\n",
-      "Name: Torque , Length: 595, dtype: int64\n",
-      "-------------------------------------------------\n",
-      "-------------------------------------------------\n",
-      "Tool wear \n",
-      "0.0      2448\n",
-      "2.0      1160\n",
-      "5.0       997\n",
-      "59.0      906\n",
-      "119.0     903\n",
-      "         ... \n",
-      "241.0       4\n",
-      "237.0       3\n",
-      "253.0       2\n",
-      "239.0       1\n",
-      "236.0       1\n",
-      "Name: Tool wear , Length: 246, dtype: int64\n",
-      "-------------------------------------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in df.columns:\n",
-    "    name = i\n",
-    "    vals = df[i].value_counts()\n",
-    "    print('-------------------------------------------------')\n",
-    "    print(name)\n",
-    "    print(vals)\n",
-    "    print('-------------------------------------------------')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "f789d6f2",
+   "execution_count": 18,
+   "id": "bb42e6ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "target = 'Machine failure'\n",
     "cat_features = df[['Type', 'TWF', 'HDF',\n",
-    "                'PWF', 'OSF','RNF', 'Tool wear ']]\n",
+    "                'PWF', 'OSF','RNF']]\n",
     "num_features = df[['Product ID', 'Air temperature ',\n",
     "                'Process temperature ', 'Rotational speed ', 'Torque ']]"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "7e986b59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type\n",
+      "['L', 'M', 'H']\n",
+      "[158792, 53687, 14904]\n",
+      "----------\n",
+      "TWF\n",
+      "[0, 1]\n",
+      "[227037, 346]\n",
+      "----------\n",
+      "HDF\n",
+      "[0, 1]\n",
+      "[226193, 1190]\n",
+      "----------\n",
+      "PWF\n",
+      "[0, 1]\n",
+      "[226842, 541]\n",
+      "----------\n",
+      "OSF\n",
+      "[0, 1]\n",
+      "[226491, 892]\n",
+      "----------\n",
+      "RNF\n",
+      "[0, 1]\n",
+      "[226865, 518]\n",
+      "----------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'distinct_values': [0, 1], 'counts': [226865, 518]}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value_counts_dict = {}\n",
+    "\n",
+    "for col in cat_features.columns:\n",
+    "    vals = cat_features[col].value_counts()\n",
+    "    \n",
+    "    value_counts_dict[col] = {\n",
+    "        'distinct_values': vals.index.tolist(),\n",
+    "        'counts': vals.values.tolist()\n",
+    "    }\n",
+    "\n",
+    "for col, counts_info in value_counts_dict.items():\n",
+    "    print(f\"{col}\")\n",
+    "    print(counts_info['distinct_values'])\n",
+    "    print(counts_info['counts'])\n",
+    "    print(\"----------\")\n",
+    "counts_info"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
-   "id": "903ddf1a",
+   "id": "8221c247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1582,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2220cc74",
+   "id": "1f420521",
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1812,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "93130659",
+   "id": "c39c7dad",
    "metadata": {},
    "outputs": [
     {
@@ -2018,7 +1837,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ece19d9e",
+   "id": "7ecdeb3c",
    "metadata": {
     "scrolled": false
    },
@@ -2095,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "88449810",
+   "id": "ae16b5d6",
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37009d05",
+   "id": "e506d4e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2206,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e4205d",
+   "id": "220a87a7",
    "metadata": {},
    "outputs": [],
    "source": [
