feature selection- readme

--- a/src/Hyper-Modeling.ipynb
+++ b/src/Hyper-Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6a4337bb",
+   "id": "b46abc7c",
    "metadata": {},
    "source": [
     "# Modeling - Hyperparameter tuning (Adv-ML)\n",
@@ -15,10 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "816c9c04",
+   "execution_count": 1,
+   "id": "f6c829b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The text.latex.unicode rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2.\n",
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The savefig.frameon rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The pgf.debug rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2.\n",
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The verbose.level rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "In C:\\Users\\Mirna Elizondo\\anaconda3\\envs\\condaEnv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The verbose.fileo rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -41,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d2dc230",
+   "id": "92c4b6bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05cc91df",
+   "id": "259dcd0e",
    "metadata": {
     "scrolled": true
    },
@@ -83,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a6a97da",
+   "id": "1aeccd8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80997ff3",
+   "id": "1415025c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -109,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c71e7db4",
+   "id": "dfdf5233",
    "metadata": {
     "scrolled": true
    },
@@ -135,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d49614",
+   "id": "58dcf6cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db1bb298",
+   "id": "21f8a1bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd34c7ab",
+   "id": "e439ad4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c9b39fb",
+   "id": "b45615c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bea79ca8",
+   "id": "d4a157b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1b28bef",
+   "id": "c394f382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a5cd0f7",
+   "id": "44332f8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72103354",
+   "id": "9800296f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ed909c0",
+   "id": "18c38e9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9605f671",
+   "id": "1a6d74f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf6268ee",
+   "id": "0f781015",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -384,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f6b6b7a",
+   "id": "92d951ef",
    "metadata": {},
    "outputs": [],
    "source": []
